fix: modal z-index 설정

--- a/css/modal.css
+++ b/css/modal.css
@@ -3,10 +3,12 @@
 modal {
   visibility: hidden;
   position: fixed;
+  z-index: 99;
   top: 0%;
   left: 0%;
   width: 100%;
   height: 100vh;
+  background-color: #333a;
 }
 .modal_bg {
   z-index: 98;
@@ -14,16 +16,11 @@ modal {
   width: 100%;
   height: 100vh;
   opacity: 0;
-  background-color: #333;
   transition: 0.2s;
 }
 .modal_box {
   opacity: 0;
   transition: 0.2s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -38,21 +35,17 @@ modal {
   padding: 3%;
 }
 .modal_text {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #f00;
+  font-size: 1.5rem;
+  padding: 12px 32px;
 }
 
 .modal_box > button {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 1.2rem;
   margin-top: 15%;
-  color: #c00;
+  padding: 8px 16px;
   border-radius: 0.4rem;
-  padding: 1% 3%;
   background-color: #fff;
   cursor: pointer;
-  transition: 0.2s;
   border: 1px solid #333;
 }
 
